apps/generic/overlays/kavita/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kavita
spec:
  template:
    spec:
      containers:
        - name: container
          image: docker.io/linuxserver/kavita:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /config
              subPath: configs/kavita/
            - name: main-volume
              mountPath: /data
              subPath: public/Books/
          ports:
            - name: http
              $patch: delete
            - name: http
              containerPort: 5000
              protocol: TCP
